--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>2.0.7</version>
         </dependency>
 
+        <!--JSONParser-->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
         <!-- AspectJ -->
         <dependency>
